greeter/istiofiles/vs-greeter-service-v1-50-v2-50-retry.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
  - greeter-service
  http:
  - retries:
      attempts: 5
      perTryTimeout: 1.00s
      retryOn: 'gateway-error,connect-failure,refused-stream'
    route:
    - destination:
        host: greeter-service
        subset: v1
      weight: 50
    - destination:
        host: greeter-service
        subset: v2
      weight: 50
