greeter/istiofiles/vs-greeter-service-v1-50-v3-50-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
  - greeter-service
  http:
  - timeout: 1.000s
    route:
    - destination:
        host: greeter-service
        subset: v1
      weight: 50
    - destination:
        host: greeter-service
        subset: v3
      weight: 50
