greeter/istiofiles/vs-greeter-service-v1-70-v2-30.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
  - greeter-service
  http:
  - route:
    - destination:
        host: greeter-service
        subset: v1
      weight: 70
    - destination:
        host: greeter-service
        subset: v2
      weight: 30
