greeter/istiofiles/vs-greeter-service-v1-v2-canary.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
  - greeter-service
  http:
  - match:
    - headers:
        x-channel:
          exact: canary
    route:
    - destination:
        host: greeter-service
        subset: v2
  - route:
    - destination:
        host: greeter-service
        subset: v1
